--- a/Linkup/res/layout/activity_linkup.xml
+++ b/Linkup/res/layout/activity_linkup.xml
@@ -16,55 +16,69 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="vertical" >
 
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="10dp"
-            android:gravity="center"
-            android:src="@drawable/ic_launcher"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/tvLevel"
-            android:layout_width="wrap_content"
+        <ProgressBar
+            android:id="@+id/pbTime"
+            style="@style/tallerBarStyle"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:gravity="center"
-            android:textColor="#FFD700"
-            android:textSize="18sp" />
+            android:layout_gravity="top|center"
+            android:gravity="center" />
 
-        <TextSwitcher
-            android:id="@+id/scoreText"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:textAlignment="center"
-            android:inAnimation="@anim/slide_in_up"
-            android:outAnimation="@anim/slide_out_up" />
+            android:orientation="horizontal" >
 
-        <TextView
-            android:id="@+id/maxScore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginRight="10dp"
-            android:gravity="center"
-            android:text=""
-            android:textColor="#FFD700"
-            android:textSize="18sp" />
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center"
+                android:layout_marginRight="10dp"
+                android:gravity="center"
+                android:src="@drawable/ic_launcher"
+                tools:ignore="ContentDescription" />
 
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center"
-            android:background="@drawable/champion"
-            tools:ignore="ContentDescription" >
-        </ImageView>
+            <TextView
+                android:id="@+id/tvLevel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:textColor="#FFD700"
+                android:textSize="18sp" />
+
+            <TextSwitcher
+                android:id="@+id/scoreText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:inAnimation="@anim/slide_in_up"
+                android:outAnimation="@anim/slide_out_up"
+                android:textAlignment="center" />
+
+            <TextView
+                android:id="@+id/maxScore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:gravity="center"
+                android:text=""
+                android:textColor="#FFD700"
+                android:textSize="18sp" />
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:background="@drawable/champion"
+                tools:ignore="ContentDescription" >
+            </ImageView>
+        </LinearLayout>
     </LinearLayout>
 
     <!-- <LinearLayout -->
@@ -83,28 +97,27 @@
     <!-- android:gravity="center" > -->
     <!-- </ImageView> -->
 
-    <ProgressBar
-        android:id="@+id/pbTime"
-        style="@style/tallerBarStyle"
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:gravity="center" />
+
+    <!-- <ProgressBar -->
+    <!-- android:id="@+id/pbTime" -->
+    <!-- style="@style/tallerBarStyle" -->
+    <!-- android:layout_width="400dp" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:layout_gravity="top|center" -->
+    <!-- android:gravity="center" /> -->
     <!-- </LinearLayout> -->
 
-<!--     <com.znv.linkup.view.animation.path.CoinImageView -->
+<!--     <ImageView -->
 <!--         android:id="@+id/startCoin" -->
-<!--         android:layout_width="24dp" -->
-<!--         android:layout_height="24dp" -->
-<!--         android:alpha="0" -->
+<!--         android:layout_width="wrap_content" -->
+<!--         android:layout_height="wrap_content" -->
 <!--         android:background="@drawable/coin" -->
 <!--         tools:ignore="ContentDescription" /> -->
 
-<!--     <com.znv.linkup.view.animation.path.CoinImageView -->
+<!--     <ImageView -->
 <!--         android:id="@+id/endCoin" -->
-<!--         android:layout_width="24dp" -->
-<!--         android:layout_height="24dp" -->
-<!--         android:alpha="0" -->
+<!--         android:layout_width="wrap_content" -->
+<!--         android:layout_height="wrap_content" -->
 <!--         android:background="@drawable/coin" -->
 <!--         tools:ignore="ContentDescription" /> -->
 
