--- a/Linkup/res/layout/activity_welcome.xml
+++ b/Linkup/res/layout/activity_welcome.xml
@@ -1,90 +1,109 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/welcome"
+    android:gravity="center_horizontal|center_vertical"
+    android:orientation="vertical"
     tools:context=".WelcomeActivity" >
 
-    <LinearLayout
-        android:id="@+id/center_layout"
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:gravity="center_horizontal|center_vertical"
-        android:orientation="vertical" >
-
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:layout_margin="80dp"
-            android:onClick="startHelp"
-            android:src="@drawable/ic_launcher"
-            tools:ignore="contentDescription" />
-
-
-
-        <com.znv.linkup.view.GameTitle
-            android:id="@+id/gameTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="96dp"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:orientation="horizontal" />
-
-        <ImageButton
-            android:id="@+id/ibtnStart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="80dp"
-            android:background="@drawable/start_selector"
-            android:onClick="startGame"
-            tools:ignore="contentDescription" />
-    </LinearLayout>
-
     <!-- <LinearLayout -->
-    <!-- android:layout_width="match_parent" -->
-    <!-- android:layout_height="match_parent" -->
-    <!-- android:gravity="bottom|right" -->
-    <!-- android:orientation="vertical" -->
-    <!-- android:padding="5dp" > -->
-
-
-    <!-- <ImageButton -->
-    <!-- android:id="@+id/ibtnHelp" -->
-    <!-- android:layout_width="wrap_content" -->
-    <!-- android:layout_height="wrap_content" -->
-    <!-- android:background="@drawable/help" -->
-    <!-- android:onClick="startHelp" -->
-    <!-- tools:ignore="contentDescription" /> -->
-    <!-- </LinearLayout> -->
-
-
-    <!-- <LinearLayout -->
-    <!-- android:layout_width="match_parent" -->
-    <!-- android:layout_height="match_parent" -->
-    <!-- android:gravity="bottom|left" -->
-    <!-- android:orientation="vertical" -->
-    <!-- android:padding="5dp" > -->
-
-
-    <!-- <ImageButton -->
-    <!-- android:id="@+id/ibtnExit" -->
-    <!-- android:layout_width="wrap_content" -->
-    <!-- android:layout_height="wrap_content" -->
-    <!-- android:background="@drawable/exit" -->
-    <!-- android:onClick="exit" -->
-    <!-- tools:ignore="contentDescription" /> -->
-    <!-- </LinearLayout> -->
-
-
-    <!-- <LinearLayout -->
-    <!-- android:id="@+id/container" -->
+    <!-- android:id="@+id/center_layout" -->
     <!-- android:layout_width="fill_parent" -->
     <!-- android:layout_height="fill_parent" -->
-    <!-- android:gravity="center" -->
-    <!-- android:orientation="horizontal" -->
-    <!-- android:paddingBottom="20dp" > -->
-    <!-- </LinearLayout> -->
+    <!-- android:gravity="center_horizontal|center_vertical" -->
+    <!-- android:orientation="vertical" > -->
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2" />
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:onClick="startHelp"
+        android:src="@drawable/ic_launcher"
+        tools:ignore="contentDescription" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2" />
+
+    <com.znv.linkup.view.GameTitle
+        android:id="@+id/gameTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="96dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:orientation="horizontal" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3" />
+
+    <ImageButton
+        android:id="@+id/ibtnStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/start_selector"
+        android:onClick="startGame"
+        tools:ignore="contentDescription" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3" />
+
+</LinearLayout>
+<!-- <LinearLayout -->
+<!-- android:layout_width="match_parent" -->
+<!-- android:layout_height="match_parent" -->
+<!-- android:gravity="bottom|right" -->
+<!-- android:orientation="vertical" -->
+<!-- android:padding="5dp" > -->
+
+
+<!-- <ImageButton -->
+<!-- android:id="@+id/ibtnHelp" -->
+<!-- android:layout_width="wrap_content" -->
+<!-- android:layout_height="wrap_content" -->
+<!-- android:background="@drawable/help" -->
+<!-- android:onClick="startHelp" -->
+<!-- tools:ignore="contentDescription" /> -->
+<!-- </LinearLayout> -->
+
+
+<!-- <LinearLayout -->
+<!-- android:layout_width="match_parent" -->
+<!-- android:layout_height="match_parent" -->
+<!-- android:gravity="bottom|left" -->
+<!-- android:orientation="vertical" -->
+<!-- android:padding="5dp" > -->
+
+
+<!-- <ImageButton -->
+<!-- android:id="@+id/ibtnExit" -->
+<!-- android:layout_width="wrap_content" -->
+<!-- android:layout_height="wrap_content" -->
+<!-- android:background="@drawable/exit" -->
+<!-- android:onClick="exit" -->
+<!-- tools:ignore="contentDescription" /> -->
+<!-- </LinearLayout> -->
+
+
+<!-- <LinearLayout -->
+<!-- android:id="@+id/container" -->
+<!-- android:layout_width="fill_parent" -->
+<!-- android:layout_height="fill_parent" -->
+<!-- android:gravity="center" -->
+<!-- android:orientation="horizontal" -->
+<!-- android:paddingBottom="20dp" > -->
+<!-- </LinearLayout> -->
+
+
+<!-- </RelativeLayout> -->
