--- a/Linkup/res/values/colors.xml
+++ b/Linkup/res/values/colors.xml
@@ -1,3 +1,13 @@
 <resources>
-
+     <bool name="default_circle_indicator_centered">true</bool>
+    <color name="default_circle_indicator_fill_color">#FFFFFFFF</color>
+    <color name="default_circle_indicator_page_color">#00000000</color>
+    <integer name="default_circle_indicator_orientation">0</integer>
+    <dimen name="default_circle_indicator_radius">3dp</dimen>
+    <bool name="default_circle_indicator_snap">false</bool>
+    <color name="default_circle_indicator_stroke_color">#FFDDDDDD</color>
+    <dimen name="default_circle_indicator_stroke_width">1dp</dimen>
+    <color name="rank_title_color_1">#FF33ff33</color>
+    <color name="rank_title_color_2">#FF3333ff</color>
+    <color name="rank_title_color_3">#FFffff33</color>
 </resources>
