修改连击提示

--- a/Linkup/res/layout/toast.xml
+++ b/Linkup/res/layout/toast.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
+<!-- android:layout_width="match_parent" -->
+<!-- android:layout_height="match_parent" -->
+<!-- android:background="#00000000" -->
+<!-- android:orientation="vertical" > -->
+
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/toast_message"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:background="#00000000"
-    android:orientation="vertical" >
+    android:gravity="center"
+    android:textColor="#FF3399"
+    android:textSize="30sp" />
 
-    <TextView
-        android:id="@+id/toast_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#FF3399"
-        android:textSize="30sp" />
-
-</LinearLayout>
+<!-- </LinearLayout> -->
