--- a/Linkup/res/layout/activity_welcome.xml
+++ b/Linkup/res/layout/activity_welcome.xml
@@ -7,13 +7,6 @@
     android:orientation="vertical"
     tools:context=".WelcomeActivity" >
 
-    <!-- <LinearLayout -->
-    <!-- android:id="@+id/center_layout" -->
-    <!-- android:layout_width="fill_parent" -->
-    <!-- android:layout_height="fill_parent" -->
-    <!-- android:gravity="center_horizontal|center_vertical" -->
-    <!-- android:orientation="vertical" > -->
-
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="0dp"
@@ -57,53 +50,30 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="3" />
+        android:layout_weight="1" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/music"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            tools:ignore="contentDescription" />
+
+        <ImageView
+            android:id="@+id/sound"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            tools:ignore="contentDescription" />
+    </LinearLayout>
 
 </LinearLayout>
-<!-- <LinearLayout -->
-<!-- android:layout_width="match_parent" -->
-<!-- android:layout_height="match_parent" -->
-<!-- android:gravity="bottom|right" -->
-<!-- android:orientation="vertical" -->
-<!-- android:padding="5dp" > -->
-
-
-<!-- <ImageButton -->
-<!-- android:id="@+id/ibtnHelp" -->
-<!-- android:layout_width="wrap_content" -->
-<!-- android:layout_height="wrap_content" -->
-<!-- android:background="@drawable/help" -->
-<!-- android:onClick="startHelp" -->
-<!-- tools:ignore="contentDescription" /> -->
-<!-- </LinearLayout> -->
-
-
-<!-- <LinearLayout -->
-<!-- android:layout_width="match_parent" -->
-<!-- android:layout_height="match_parent" -->
-<!-- android:gravity="bottom|left" -->
-<!-- android:orientation="vertical" -->
-<!-- android:padding="5dp" > -->
-
-
-<!-- <ImageButton -->
-<!-- android:id="@+id/ibtnExit" -->
-<!-- android:layout_width="wrap_content" -->
-<!-- android:layout_height="wrap_content" -->
-<!-- android:background="@drawable/exit" -->
-<!-- android:onClick="exit" -->
-<!-- tools:ignore="contentDescription" /> -->
-<!-- </LinearLayout> -->
-
-
-<!-- <LinearLayout -->
-<!-- android:id="@+id/container" -->
-<!-- android:layout_width="fill_parent" -->
-<!-- android:layout_height="fill_parent" -->
-<!-- android:gravity="center" -->
-<!-- android:orientation="horizontal" -->
-<!-- android:paddingBottom="20dp" > -->
-<!-- </LinearLayout> -->
-
-
-<!-- </RelativeLayout> -->
