--- a/Linkup/res/layout/activity_linkup.xml
+++ b/Linkup/res/layout/activity_linkup.xml
@@ -81,44 +81,33 @@
         </LinearLayout>
     </LinearLayout>
 
-    <!-- <LinearLayout -->
-    <!-- android:layout_width="fill_parent" -->
-    <!-- android:layout_height="wrap_content" -->
-    <!-- android:layout_gravity="bottom" -->
-    <!-- android:gravity="center" -->
-    <!-- android:orientation="horizontal" > -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_margin="10dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:orientation="horizontal" >
 
+        <ImageView
+            android:id="@+id/prompt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:onClick="prompt"
+            android:src="@drawable/search"
+            tools:ignore="contentDescription" />
 
-    <!-- <ImageView -->
-    <!-- android:layout_width="30dp" -->
-    <!-- android:layout_height="30dp" -->
-    <!-- android:layout_marginRight="10dp" -->
-    <!-- android:background="@drawable/time" -->
-    <!-- android:gravity="center" > -->
-    <!-- </ImageView> -->
-
-
-    <!-- <ProgressBar -->
-    <!-- android:id="@+id/pbTime" -->
-    <!-- style="@style/tallerBarStyle" -->
-    <!-- android:layout_width="400dp" -->
-    <!-- android:layout_height="wrap_content" -->
-    <!-- android:layout_gravity="top|center" -->
-    <!-- android:gravity="center" /> -->
-    <!-- </LinearLayout> -->
-
-<!--     <ImageView -->
-<!--         android:id="@+id/startCoin" -->
-<!--         android:layout_width="wrap_content" -->
-<!--         android:layout_height="wrap_content" -->
-<!--         android:background="@drawable/coin" -->
-<!--         tools:ignore="ContentDescription" /> -->
-
-<!--     <ImageView -->
-<!--         android:id="@+id/endCoin" -->
-<!--         android:layout_width="wrap_content" -->
-<!--         android:layout_height="wrap_content" -->
-<!--         android:background="@drawable/coin" -->
-<!--         tools:ignore="ContentDescription" /> -->
+        <ImageView
+            android:id="@+id/sound"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:onClick="refresh"
+            android:src="@drawable/reload"
+            tools:ignore="contentDescription" />
+    </LinearLayout>
 
 </FrameLayout>
