--- a/Linkup/res/layout/activity_linkup.xml
+++ b/Linkup/res/layout/activity_linkup.xml
@@ -82,6 +82,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/tools"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
