--- a/Linkup/res/layout/activity_rank.xml
+++ b/Linkup/res/layout/activity_rank.xml
@@ -14,7 +14,7 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <com.znv.linkup.view.indicator.IconPageIndicator
+    <com.znv.linkup.view.indicator.CirclePageIndicator
         android:id="@+id/indicator"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
