--- a/Linkup/res/values/attrs.xml
+++ b/Linkup/res/values/attrs.xml
@@ -1,20 +1,26 @@
 <resources>
+
     <declare-styleable name="ViewPagerIndicator">
+
         <!-- Style of the circle indicator. -->
-        <attr name="vpiCirclePageIndicatorStyle" format="reference"/>
-        <!-- Style of the icon indicator's views. -->
-        <attr name="vpiIconPageIndicatorStyle" format="reference"/>
+        <attr name="vpiCirclePageIndicatorStyle" format="reference" />
     </declare-styleable>
-    
+
+    <attr name="centered" format="boolean" />
+    <attr name="selectedColor" format="color" />
+    <attr name="strokeWidth" format="dimension" />
+    <attr name="unselectedColor" format="color" />
+
     <declare-styleable name="CirclePageIndicator">
+
         <!-- Whether or not the indicators should be centered. -->
-        <attr name="centered" format="boolean"/>
+        <attr name="centered" />
         <!-- Color of the filled circle that represents the current page. -->
         <attr name="fillColor" format="color" />
         <!-- Color of the filled circles that represents pages. -->
         <attr name="pageColor" format="color" />
         <!-- Orientation of the indicator. -->
-        <attr name="android:orientation"/>
+        <attr name="android:orientation" />
         <!-- Radius of the circles. This is also the spacing between circles. -->
         <attr name="radius" format="dimension" />
         <!-- Whether or not the selected indicator snaps to the circles. -->
@@ -22,9 +28,9 @@
         <!-- Color of the open circles. -->
         <attr name="strokeColor" format="color" />
         <!-- Width of the stroke used to draw the circles. -->
-        <attr name="strokeWidth" format="integer"/>
+        <attr name="strokeWidth" />
         <!-- View background -->
-        <attr name="android:background"/>
+        <attr name="android:background" />
     </declare-styleable>
 
 </resources>
