更改游戏背景

--- a/Linkup/res/layout/activity_linkup.xml
+++ b/Linkup/res/layout/activity_linkup.xml
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:gravity="center"
-                android:textColor="#FFD700"
+                android:textColor="#FF0099FF"
                 android:textSize="18sp" />
 
             <TextSwitcher
@@ -68,7 +68,7 @@
                 android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:text=""
-                android:textColor="#FFD700"
+                android:textColor="#FF0099FF"
                 android:textSize="18sp" />
 
             <ImageView
