--- a/Linkup/res/layout/level.xml
+++ b/Linkup/res/layout/level.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textview"
+        android:id="@+id/tvLevel"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_gravity="center"
@@ -15,7 +15,7 @@
         android:textStyle="bold" />
 
     <RatingBar
-        android:id="@+id/rating"
+        android:id="@+id/rbStar"
         style="@style/ratingStar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
