--- a/Linkup/res/layout/activity_linkup.xml
+++ b/Linkup/res/layout/activity_linkup.xml
@@ -31,15 +31,15 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
 
-            <ImageView
-                android:id="@+id/logo"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_gravity="center"
-                android:layout_marginRight="10dp"
-                android:gravity="center"
-                android:src="@drawable/ic_launcher"
-                tools:ignore="ContentDescription" />
+            <!-- <ImageView -->
+            <!-- android:id="@+id/logo" -->
+            <!-- android:layout_width="32dp" -->
+            <!-- android:layout_height="32dp" -->
+            <!-- android:layout_gravity="center" -->
+            <!-- android:layout_marginRight="10dp" -->
+            <!-- android:gravity="center" -->
+            <!-- android:src="@drawable/ic_launcher" -->
+            <!-- tools:ignore="ContentDescription" /> -->
 
             <TextView
                 android:id="@+id/tvLevel"
@@ -71,13 +71,13 @@
                 android:textColor="#FF0099FF"
                 android:textSize="18sp" />
 
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center"
-                android:background="@drawable/champion"
-                tools:ignore="ContentDescription" >
-            </ImageView>
+            <!-- <ImageView -->
+            <!-- android:layout_width="24dp" -->
+            <!-- android:layout_height="24dp" -->
+            <!-- android:layout_gravity="center" -->
+            <!-- android:background="@drawable/champion" -->
+            <!-- tools:ignore="ContentDescription" > -->
+            <!-- </ImageView> -->
         </LinearLayout>
     </LinearLayout>
 
@@ -144,12 +144,5 @@
         android:textColor="#FFFF3399"
         android:textSize="30sp" >
     </TextView>
-
-    <com.znv.linkup.view.animation.view.AnimatorImage
-        android:id="@+id/pathImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:alpha="0"
-        tools:ignore="ContentDescription" />
 
 </FrameLayout>
