--- a/Linkup/res/layout/activity_welcome.xml
+++ b/Linkup/res/layout/activity_welcome.xml
@@ -14,11 +14,11 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:onClick="startHelp"
-        android:src="@drawable/ic_launcher"
+        android:src="@drawable/logo"
         tools:ignore="contentDescription" />
 
     <TextView
