优化界面呈现，提示，消除路径等

--- a/Linkup/res/layout/activity_linkup.xml
+++ b/Linkup/res/layout/activity_linkup.xml
@@ -6,12 +6,10 @@
     android:background="#0099cc"
     tools:context=".GameActivity" >
 
-    <com.znv.linkup.view.GameView
-        android:id="@+id/gameView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:keepScreenOn="true" />
+    <com.znv.linkup.view.CardsView
+        android:id="@+id/cardsView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
