--- a/Linkup/res/values/colors.xml
+++ b/Linkup/res/values/colors.xml
@@ -1,5 +1,10 @@
 <resources>
+
     <color name="rank_title_color_1">#FF00CC00</color>
     <color name="rank_title_color_2">#FF3333FF</color>
     <color name="rank_title_color_3">#FFFFA500</color>
+    <color name="check_color">#FFFF0000</color>
+    <color name="prompt_color">#FFFF0000</color>
+    <color name="path_color">#FFFF0000</color>
+
 </resources>
