--- a/Linkup/res/layout/level.xml
+++ b/Linkup/res/layout/level.xml
@@ -7,11 +7,11 @@
 
     <TextView
         android:id="@+id/tvLevel"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:textSize="40sp"
+        android:textSize="32sp"
         android:textStyle="bold" />
 
     <RatingBar
