--- a/Linkup/res/values/colors.xml
+++ b/Linkup/res/values/colors.xml
@@ -6,5 +6,12 @@
     <color name="check_color">#FFFF0000</color>
     <color name="prompt_color">#FFFF0000</color>
     <color name="path_color">#FFFF0000</color>
+    <color name="wandou_ads_green_normal">#3baa24</color>
+    <color name="wandou_ads_green_pressed">#278918</color>
+    <color name="wandou_ads_green_disabled">#98cc8e</color>
+    <color name="wandou_ads_grey_normal">#eeeeee</color>
+    <color name="wandou_ads_grey_pressed">#e8e8e8</color>
+    <color name="wandou_font_color_black">#222222</color>
+    <color name="wandou_font_color_white">#FFFFFF</color>
 
 </resources>
