增加提示音，调整图标

--- a/Linkup/res/layout/activity_linkup.xml
+++ b/Linkup/res/layout/activity_linkup.xml
@@ -95,7 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="#00000000"
-            android:drawableLeft="@drawable/search"
+            android:drawableLeft="@drawable/prompt"
             android:gravity="center"
             android:onClick="prompt"
             android:textColor="#FFFF0000"
@@ -108,7 +108,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="#00000000"
-            android:drawableLeft="@drawable/reload"
+            android:drawableLeft="@drawable/refresh"
             android:gravity="center"
             android:onClick="refresh"
             android:textColor="#FFFF0000"
