--- a/Linkup/res/layout/level.xml
+++ b/Linkup/res/layout/level.xml
@@ -16,7 +16,7 @@
 
     <RatingBar
         android:id="@+id/rbStar"
-        style="@style/ratingStar"
+        style="@style/RatingStarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
