--- a/Linkup/res/layout/activity_linkup.xml
+++ b/Linkup/res/layout/activity_linkup.xml
@@ -18,7 +18,7 @@
 
         <ProgressBar
             android:id="@+id/pbTime"
-            style="@style/tallerBarStyle"
+            style="@style/ProgressStyle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top|center"
