--- a/Linkup/res/layout/result_dialog.xml
+++ b/Linkup/res/layout/result_dialog.xml
@@ -37,7 +37,7 @@
 
     <RatingBar
         android:id="@+id/level_rating"
-        style="@style/bigRatingStar"
+        style="@style/BigRatingStarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
