--- a/Linkup/res/layout/activity_linkup.xml
+++ b/Linkup/res/layout/activity_linkup.xml
@@ -128,25 +128,28 @@
     </ImageView>
 
     <TextView
-        android:id="@+id/comboText"
+        android:id="@+id/tvCombo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0"
         android:background="#00000000"
+        android:drawableRight="@drawable/combo"
         android:gravity="center"
-        android:textColor="#FFFF3399"
-        android:textSize="30sp" >
+        android:textColor="#FFFFFF00"
+        android:textSize="48sp"
+        android:textStyle="bold" >
     </TextView>
 
     <TextView
-        android:id="@+id/otherText"
+        android:id="@+id/tvAnimMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0"
         android:background="#00000000"
         android:gravity="center"
         android:textColor="#FFFF3399"
-        android:textSize="20sp" >
+        android:textSize="30sp"
+        android:textStyle="bold" >
     </TextView>
 
 </FrameLayout>
