--- a/Linkup/res/layout/confirm_dialog.xml
+++ b/Linkup/res/layout/confirm_dialog.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/dialog_bg"
@@ -17,7 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:background="@drawable/success" />
+            android:background="@drawable/success"
+            tools:ignore="contentDescription" />
 
         <TextView
             android:id="@+id/dialog_title"
