--- a/Linkup/res/layout/help_dialog.xml
+++ b/Linkup/res/layout/help_dialog.xml
@@ -1,34 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/dialog_bg"
     android:gravity="center_vertical|center_horizontal"
     android:orientation="vertical" >
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/dialog_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:drawableLeft="@drawable/ic_launcher"
+        android:gravity="center"
         android:paddingLeft="30dip"
-        android:paddingTop="10dip" >
-
-        <ImageView
-            android:id="@+id/dialog_title_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:background="@drawable/success" />
-
-        <TextView
-            android:id="@+id/dialog_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dip"
-            android:layout_toRightOf="@id/dialog_title_image"
-            android:textColor="#000000"
-            android:textSize="30sp" />
-    </RelativeLayout>
+        android:paddingRight="78dip"
+        android:paddingTop="10dip"
+        android:textColor="#FF3333FF"
+        android:textSize="32sp" />
+    <!-- </LinearLayout> -->
 
     <TextView
         android:layout_width="fill_parent"
@@ -45,7 +35,7 @@
         android:layout_marginTop="10dip"
         android:layout_weight="1"
         android:textColor="#000000"
-        android:textSize="16sp" />
+        android:textSize="18sp" />
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -57,11 +47,11 @@
 
         <Button
             android:id="@+id/dialog_button_ok"
-            android:layout_width="100dip"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:drawableLeft="@drawable/ok"
-            android:textSize="20sp" />
+            android:textSize="24sp" />
     </RelativeLayout>
 
 </LinearLayout>
