--- a/Linkup/res/layout/activity_welcome.xml
+++ b/Linkup/res/layout/activity_welcome.xml
@@ -25,14 +25,49 @@
         android:gravity="center"
         android:orientation="horizontal" />
 
-    <ImageButton
-        android:id="@+id/ibtnStart"
-        android:layout_width="wrap_content"
+    <!-- <ImageButton -->
+    <!-- android:id="@+id/ibtnStart" -->
+    <!-- android:layout_width="wrap_content" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:layout_margin="40dp" -->
+    <!-- android:background="@drawable/start_selector" -->
+    <!-- android:onClick="startGame" -->
+    <!-- tools:ignore="contentDescription" /> -->
+
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="40dp"
-        android:background="@drawable/start_selector"
-        android:onClick="startGame"
-        tools:ignore="contentDescription" />
+        android:layout_margin="20dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageButton
+            android:id="@+id/mode0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/qiu_cyan"
+            android:tag="0"
+            tools:ignore="contentDescription" />
+
+        <ImageButton
+            android:id="@+id/mode1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/qiu_yellow"
+            android:tag="1"
+            tools:ignore="contentDescription" />
+
+        <ImageButton
+            android:id="@+id/mode2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/qiu_green"
+            android:tag="2"
+            tools:ignore="contentDescription" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
